# Rocstar

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  CTestConfig.cmake  LICENSE  README.md
Rocburn/: 01.burn_interface_data.f90  CMakeLists.txt  README  Rocburn_load_module.f90  calcdist.f90  rocburn_2D.f90
Rocburn/Rocburn_APN/: 02.burn_APN_global_data.f90  APN_input_0d.f90  RocburnAPNControl.txt  Rocburn_1D_APN.f90  Rocburn_APN_0d.dat.NAWC_M13  Rocburn_APN_0d.dat.shuttle
Rocburn/Rocburn_PY/: RBRNtable.txt  RocburnPYControl.txt  Rocburn_py.f90  data_py.f90  init_py.f90  setup_py.f90  update_py.f90
Rocburn/Rocburn_ZN/: 02.burn_ZN_global_data.f90  RocburnZNControl.txt  Rocburn_1D_ZN.f90  Rocburn_ZN_0d.dat.shuttle  ZN_burn_combustion.f  ZN_calc_burning_rate.f90  ZN_gen_grid.f90  ZN_ignition_combustion.f  ZN_input_0d.f90  ZN_ssWSB.f90  input_combustion.f  prop_properties.dat.labscalemotor  prop_properties.dat.shuttle
Roccom/Rocin/: CMakeLists.txt
Roccom/Rocmap/: CMakeLists.txt
Roccom/Rocout/: CMakeLists.txt
Roccom/Rocsurf/: CMakeLists.txt
Rocface/: CMakeLists.txt
Rocface/util/: surfdiver.C
RocfluidMP/: CMakeLists.txt  CODING_RULES  Makefile  Makefile.AIX  Makefile.Darwin  Makefile.IRIX64  Makefile.Linux  Makefile.SunOS  Makefile.common  Makefile.dep  README  TEMPLATE.F90
RocfluidMP/Rocflo/: CMakeLists.txt
RocfluidMP/Rocflu/: CMakeLists.txt
RocfluidMP/build_lib/: Makefile
RocfluidMP/build_std/: Makefile
RocfluidMP/build_util/: Makefile
RocfluidMP/include/: AllocateMemoryWork.h  AverageVecVar.h  BcondFarfieldPerf.h  BcondInflowPerf.h  BcondInjectionPerf.h  BcondOutflowPerf.h  BuildVersionString.h  CentroidHexa.h  CheckPositivityMP.h  ConvectiveFluxes.h  ConvectiveFluxesMP.h  DescaleGridSpeeds.h  ExplicitMultistage.h  FaceCentroidQuad.h  FaceCentroidTria.h  FaceVectorQuad.h  FaceVectorTria.h  Fluid_finalize.h  Indexing.h  InitCommunicationMP.h  MixtPerf_C2_GRT.h  MixtPerf_C_Co2GUVW.h  MixtPerf_C_DGP.h  MixtPerf_C_GHoVm2.h  MixtPerf_C_GRT.h  MixtPerf_Co2_CGUVW.h  MixtPerf_D_DoGMa.h  MixtPerf_D_PRT.h  MixtPerf_Eo_DGPUVW.h  MixtPerf_Eo_DGPVm.h  MixtPerf_G_CpR.h  MixtPerf_Ho_CpTUVW.h  MixtPerf_M_R.h  MixtPerf_P_DDoGPo.h  MixtPerf_P_DEoGVm2.h  MixtPerf_P_DRT.h  MixtPerf_P_GMaPo.h  MixtPerf_P_GPoTTo.h  MixtPerf_Po_CGPUVW.h  MixtPerf_Po_GPTTo.h  (+237 more)
RocfluidMP/libflo/: Filelist.txt  RFLO_ArcLengthBounds.F90  RFLO_BoundaryDeformation.F90  RFLO_CalcCellCentroids.F90  RFLO_CalcFaceCentroids.F90  RFLO_CalcGradConnBc.F90  RFLO_CalcGradDummy.F90  RFLO_CalcGradDummyConn.F90  RFLO_CalcGradDummyPhys.F90  RFLO_CalcGradDummySymm.F90  RFLO_CalcGradFaces.F90  RFLO_CalcGradPhysBc.F90  RFLO_CalcGradVector.F90  RFLO_ChangeInteriorGrid.F90  RFLO_CheckValidity.F90  RFLO_CopyBoundaryData.F90  RFLO_CopyEdgeFaceNorm.F90  RFLO_CopyEdgeFaceParal.F90  RFLO_CopyGeometryDummy.F90  RFLO_CopyTopologyLevels.F90  RFLO_DerivedInputValues.F90  RFLO_EdgeDeformation.F90  RFLO_EdgeDeformationStraight.F90  RFLO_ExchangeDnodeCopy.F90  RFLO_ExchangeDnodeRecv.F90  RFLO_ExchangeDnodeSend.F90  RFLO_ExtrapIntCellScal.F90  RFLO_ExtrapIntCellVec.F90  RFLO_GenerateCoarseGrids.F90  RFLO_GetDimensions.F90  RFLO_GetPatchDimens.F90  RFLO_GetPatchMapping.F90  RFLO_GridRemesh.F90  RFLO_InitInputValues.F90  RFLO_InterpolDistrib.F90  RFLO_LaplaceGridPatch.F90  RFLO_LaplaceGridSmoo.F90  RFLO_LaplaceGridSolve.F90  RFLO_RandomInit.F90  RFLO_ReadBcFarfSection.F90  (+31 more)
RocfluidMP/libfloflu/: AfterUpdateMP.F90  AllocateMemoryWork.F90  AverageVecVar.F90  BcondFarfieldPerf.F90  BcondInflowPerf.F90  BcondInflowPerf_GL.F90  BcondInjectionPerf.F90  BcondOutflowPerf.F90  BcondOutflowPerf_GL.F90  BuildFileNameBasic.F90  BuildFileNamePlain.F90  BuildFileNameSteady.F90  BuildFileNameUnsteady.F90  BuildPatchIdentifier.F90  CellCentroid.F90  CellGradientsMP.F90  ControlVolume.F90  ConvectiveFluxes.F90  ConvectiveFluxesMP.F90  DescaleGridSpeeds.F90  ExplicitMultistage.F90  FaceCentroid.F90  FaceVector.F90  Filelist.txt  GlobalCommunicationMP.F90  InitCommunicationMP.F90  IntegrateSourceTermsMP.F90  MakeNumberedKeys.F90  MixtGasLiq_C.F90  MixtGasLiq_E.F90  MixtGasLiq_P.F90  MixtLiq_C.F90  MixtLiq_D.F90  MixtPerf_C.F90  MixtPerf_Cv.F90  MixtPerf_D.F90  MixtPerf_E.F90  MixtPerf_G.F90  MixtPerf_H.F90  MixtPerf_M.F90  (+63 more)
RocfluidMP/libflu/: Filelist.txt  RFLU_AllocateDCUHREArrays.F90  RFLU_AllocateMemoryTbc.F90  RFLU_BuildDataStruct.F90  RFLU_CheckDerivedUserInput.F90  RFLU_CheckPositivity.F90  RFLU_CheckPositivityWrapper.F90  RFLU_CheckPositivity_GL.F90  RFLU_CheckUserInput.F90  RFLU_CheckValidity.F90  RFLU_CheckValidityWrapper.F90  RFLU_CheckValidity_GL.F90  RFLU_ClosePostInfo.F90  RFLU_CloseRestartInfo.F90  RFLU_ComputeDCUHREInfo.F90  RFLU_ComputeStencilSize.F90  RFLU_CreateGrid.F90  RFLU_CreateRegions.F90  RFLU_DecideNeedBGradFace.F90  RFLU_DecidePrint.F90  RFLU_DecideWrite.F90  RFLU_DerivedInputValues.F90  RFLU_DestroyGrid.F90  RFLU_EnforceBoundsWrapper.F90  RFLU_EquilibriumEulerian.F90  RFLU_FinishSD.F90  RFLU_GetCvLoc.F90  RFLU_GetUserInput.F90  RFLU_InitGlobal.F90  RFLU_InitInputValues.F90  RFLU_InvertMatrixSVD.F90  RFLU_OpenPostInfo.F90  RFLU_OpenRestartInfo.F90  RFLU_PrintFlowInfo.F90  RFLU_PrintFlowInfoWrapper.F90  RFLU_PrintGridInfo.F90  RFLU_PrintLocInfo.F90  RFLU_PrintProgressDots.F90  RFLU_PrintUserInput.F90  RFLU_PrintWarnInfo.F90  (+32 more)
RocfluidMP/modflo/: Filelist.txt  ModIndexing.F90  RFLO_ModBoundaryConditions.F90  RFLO_ModDegenerateCornEdge.F90  RFLO_ModElliptSmoothing.F90  RFLO_ModExtrapolation.F90  RFLO_ModFiniteDifference.F90  RFLO_ModForcesMoments.F90  RFLO_ModGridControlMap.F90  RFLO_ModGridMetrics.F90  RFLO_ModGridRegionShape.F90  RFLO_ModInitialization.F90  RFLO_ModInterfacesExternal.F90  RFLO_ModRestartInfo.F90  (+16 more)
Rocfrac/: CMakeLists.txt  robodoc.rc
Rocman/: CMakeLists.txt
Rocmop/: CMakeLists.txt
Rocon/: CMakeLists.txt
Rocprep/: CMakeLists.txt  ModuleProcessor.pm  Properties.pm  RocfaceProcessor.pm  RocfloProcessor.pm  RocfluProcessor.pm  RocfracProcessor.pm  Rocprep.pm  RocprepProperties.pm  RocsolidProcessor.pm  RocstarProcessor.pm  RunLogControl.pm  rocprep
Rocprop/: CMakeLists.txt
testing/: CMakeLists.txt
(+1812 files in other folders)
