cmake_minimum_required (VERSION 2.8)
project(Rocburn)
enable_language(C CXX Fortran)
load_cache(../)
set (ROCSTAR TRUE CACHE BOOL "Build as Rocstar Module")
if(NOT ENABLE_MPI)
  add_definitions( -DDUMMY_MPI )
else()
  find_package(MPI REQUIRED)
  add_definitions( -DMPICH_IGNORE_CXX_SEEK -DMPI)
  include_directories(${MPI_INCLUDE_PATH})
endif()
#find_library(HDF4_LIB df HINTS /usr/lib/hdf /usr/lib64/hdf)
#find_library(MFHDF_LIB mfhdf HINTS /usr/lib/hdf /usr/lib64/hdf)
find_library(ZLIB z)
find_library(JPEG_LIB jpeg)
find_path(HDF4_INC hdf.h HINTS /usr/include/hdf)
find_library(BLOCKSOLVE_LIBRARY blocksolve95)
find_path(BLOCKSOLVE_INC blocksolve95.h)
find_library(METIS_LIB metis)
find_path(METIS_INC metis.h)

#INCLUDE(CTest)
find_path(ROCCOM_INC com.h HINTS ../../IMPACT/COM/include)
find_path(ROCMAN_INC rocman.h HINTS ../../Rocman/include)

file (GLOB CORE_SRCS ./*.f90)
file (GLOB APN_SRCS  ./Rocburn_APN/*.f90)
file (GLOB ZN_SRCS   ./Rocburn_ZN/*.f90)
file (GLOB PY9_SRCS  ./Rocburn_PY/*.f90)
file (GLOB PYF_SRCS  ./Rocburn_PY/*.f)
set(LIB_SRCS ${CORE_SRCS} ${APN_SRCS} ${ZN_SRCS} ${PY9_SRCS} ${PYF_SRCS})
set(ALL_SRCS ${LIB_SRCS})
set_source_files_properties(${ALL_SRCS} PROPERTIES COMPILE_FLAGS "-fPIC ${MPI_Fortran_COMPILE_FLAGS}" )

# rpath settings
set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

include_directories(${ROCCOM_INC} ${ROCMAN_INC} ${HDF4_INC} ${METIS_INC})
add_definitions(-DUSE_HDF=1)

if(NOT BUILD_STATIC)
  add_library(Rocburn SHARED ${LIB_SRCS})
else()
  add_library(Rocburn STATIC ${LIB_SRCS})
  add_definitions( -DSTATIC_LINK )
endif()
target_link_libraries(Rocburn ${IMPACT_LIB} ${MPI_Fortran_LIBRARIES})
set_target_properties(Rocburn PROPERTIES LINK_FLAGS "${MPI_Fortran_LINK_FLAGS}")

INSTALL(TARGETS Rocburn RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
