cmake_minimum_required (VERSION 2.8)
project(Rocfrac)
enable_language(C CXX Fortran)
load_cache(../)
set (ROCSTAR TRUE CACHE BOOL "Build as Rocstar Module")
if(NOT ENABLE_MPI)
  add_definitions( -DDUMMY_MPI )
else()
  find_package(MPI REQUIRED)
  add_definitions( -DMPICH_IGNORE_CXX_SEEK -DMPI)
endif()
#find_library(HDF4_LIB df HINTS /usr/lib/hdf /usr/lib64/hdf)
#find_library(MFHDF_LIB mfhdf HINTS /usr/lib/hdf /usr/lib64/hdf)
find_library(ZLIB z)
find_library(JPEG_LIB jpeg)
find_path(HDF4_INC hdf.h HINTS /usr/include/hdf)
find_library(BLOCKSOLVE_LIBRARY blocksolve95)
find_path(BLOCKSOLVE_INC blocksolve95.h)
find_library(METIS_LIB metis)
find_path(METIS_INC metis.h)

find_path(ROCMAN_INC rocman.h HINTS ../../Rocman/include)

file(GLOB LIBFRAC_SRCS Source/*.f90)

list(APPEND LIBFRAC_SRCS Source/vinci_lass.c)
file(GLOB PREP_SRCS utilities/RocfracPrep/*.f90)
set(LIB_SRCS ${LIBFRAC_SRCS})
set(UTIL_SRCS ${PREP_SRCS})
set(ALL_SRCS ${LIB_SRCS} ${UTIL_SRCS})
set_source_files_properties(${ALL_SRCS} PROPERTIES COMPILE_FLAGS "-fPIC" )

# rpath settings
set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

include_directories(${ROCMAN_INC} ${HDF4_INC} ${METIS_INC})
if(ENABLE_CGNS)
    add_definitions(-DUSE_CGNS=1)
else()
    add_definitions(-DUSE_HDF=1)
endif()

if(NOT BUILD_STATIC)
  add_library(Rocfrac SHARED ${LIB_SRCS})
else()
  add_library(Rocfrac STATIC ${LIB_SRCS})
  add_definitions( -DSTATIC_LINK )
endif()
target_link_libraries(Rocfrac ${IMPACT_LIB} ${MPI_CXX_LIBRARIES} ${MPI_Fortran_LIBRARIES})

add_executable(rfracprep ${PREP_SRCS})
set_property(TARGET rfracprep PROPERTY LINKER_LANGUAGE Fortran)
target_link_libraries(rfracprep ${IMPACT_LIB} ${METIS_LIB} ${HDF5_LIBRARIES} ${MPI_CXX_LIBRARIES} ${MPI_Fortran_LIBRARIES})

install(TARGETS Rocfrac rfracprep RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
